k8s/service.yml
# k8s/service.yml
apiVersion: v1
kind: Service
metadata:
  name: ecommerce-web
spec:
  selector:
    app: ecommerce
    tier: web
  ports:
    - protocol: TCP
      port: 8000
      targetPort: 8000
